--- a/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
+++ b/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
@@ -10,9 +10,10 @@
     <img src="DAD logo.png" id="Logo" alt="Logo del DAD">
 <h1>DAD</h1>
 <H2>Dispositivo de Asistencia Domestica</H2>
-<div>
-<button>Iniciar sesión</button>
-<button>Crear Cuenta</button>
+<div class="button-container">
+    <button>Iniciar sesión</button>
+    <button>Crear Cuenta</button>
+</div>
 </div>
 </body>
 </html>
