--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -16,11 +16,15 @@
         <div class="box">
             <p> los recordatorios</p>
         </div>
-    
+   
         <h2>Tareas realizadas</h2>
         <div class="box">
             <p> las tareas</p>
         </div>
+    </div>
+    <div class="sidebar">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fes.pngtree.com%2Ffree-png-vectors%2Flos-c%25C3%25ADrculos-grises&psig=AOvVaw1Pp9Awi-teFTET7f3BQK22&ust=1755781651996000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPD5lL-6mY8DFQAAAAAdAAAAABAE" 
+        id="circulo gris" alt="icono perfil">
     </div>
 </body> 
 </html>
