esta hecho un caos necesito ayuda de un adulto de confianza

--- a/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
+++ b/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
@@ -10,9 +10,9 @@
     <img src="DAD logo.png" id="Logo" alt="Logo del DAD">
 <h1>DAD</h1>
 <H2>Dispositivo de Asistencia Domestica</H2>
-<div class="button-container">
-    <button>Iniciar sesión</button>
-    <button>Crear Cuenta</button>
+<div class="boton">
+    <button class="inicio">Iniciar sesión</button>
+    <button class="crear">Crear Cuenta</button>
 </div>
 </div>
 </body>
