organice un poco todo

--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -17,13 +17,10 @@
         <div class="box">
             <p> los recordatorios</p>
     </div>
-</div class="realizadas">
-<h2>Tareas realizadas</h2>
-<div class="box">
-    <p> las tareas</p>
+<div class="tareas">
+    <h2>Tareas realizadas</h2>
+    <div class="nota">las tareas</div>
+  </div>
 </div>
-    <div class="lateral">
-       barra lateral
-    </div>
 </body> 
 </html>
