--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -18,6 +18,12 @@
             <div class="contenedor">
                 <div class="cajarecor">
                     <h2>Recordatorios</h2>
+                    <div class="Botoncitos">
+                        <div class="caji">Opción 1</div>
+                        <div class="caji">Opción 2</div>
+                        <div class="caji">Opción 3</div>
+                        <div class="caji">Opción 4</div>
+                    </div>
                 </div>
                 <div class="cajarecor">
                     <h2>Recuérdame a la hora de salir</h2>
