--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -27,6 +27,10 @@
                 </div>
                 <div class="cajarecor">
                     <h2>Recuérdame a la hora de salir</h2>
+                    <div class="caji">Opción 1</div>
+                    <div class="caji">Opción 2</div>
+                    <div class="caji">Opción 3</div>
+                    <div class="caji">Opción 4</div>
                 </div>
             </div>
 
