--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -32,6 +32,16 @@
                     <div class="caji">Opción 3</div>
                     <div class="caji">Opción 4</div>
                 </div>
+                <div class="cajarecor">
+                    <h2>Objetos para salir de casa</h2>
+                    <div class="Botoncitos">
+                      <div class="caji">Opción 1</div>
+                      <div class="caji">Opción 2</div>
+                      <div class="caji">Opción 3</div>
+                      <div class="caji">Opción 4</div>
+                    </div>
+                  </div>
+                  
             </div>
 
             <div class="cajalarga">
