avance un poco en el inicio de sesión

--- a/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
+++ b/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
@@ -11,8 +11,8 @@
 <h1>DAD</h1>
 <H2>Dispositivo de Asistencia Domestica</H2>
 <div class="boton">
-    <button class="inicio">Iniciar sesión</button>
-    <button class="crear">Crear Cuenta</button>
+    <div class="Is"> Iniciar sesion </div>
+    <div class="Is"> Crear cuenta </div>
 </div>
 </div>
 </body>
