--- a/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
+++ b/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
@@ -11,8 +11,8 @@
 <h1>DAD</h1>
 <H2>Dispositivo de Asistencia Domestica</H2>
 <div class="boton">
-    <div class="Is"> Iniciar sesion </div>
-    <div class="Is"> Crear cuenta </div>
+    <button class="Is"> Iniciar sesion </button>
+    <button class="Is"> Crear cuenta </button>
 </div>
 </div>
 </body>
