--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -22,26 +22,26 @@
                 <div class="cajarecor">
                     <h2>Recordatorios</h2>
                     <div class="Botoncitos">
-                        <div class="caji">Opción 1</div>
-                        <div class="caji">Opción 2</div>
-                        <div class="caji">Opción 3</div>
-                        <div class="caji">Opción 4</div>
+                        <button class="caji">Opción 1</button>
+                        <button class="caji">Opción 2</button>
+                        <button class="caji">Opción 3</button>
+                        <button class="caji">Opción 4</button>
                     </div>
                 </div>
                 <div class="cajarecor">
                     <h2>Recuérdame a la hora de salir</h2>
-                    <div class="caji">Opción 1</div>
-                    <div class="caji">Opción 2</div>
-                    <div class="caji">Opción 3</div>
-                    <div class="caji">Opción 4</div>
+                    <button class="caji">Opción 1</button>
+                    <button class="caji">Opción 2</button>
+                    <button class="caji">Opción 3</button>
+                    <button class="caji">Opción 4</button>
                 </div>
                 <div class="cajarecor">
                     <h2>Objetos para salir de casa</h2>
                     <div class="Botoncitos">
-                      <div class="caji">Opción 1</div>
-                      <div class="caji">Opción 2</div>
-                      <div class="caji">Opción 3</div>
-                      <div class="caji">Opción 4</div>
+                      <button class="caji">Opción 1</button>
+                      <button class="caji">Opción 2</button>
+                      <button class="caji">Opción 3</button>
+                      <button class="caji">Opción 4</button>
                     </div>
                   </div>
                   
