avance un toque pero estuvo desenfocado esta clase
:( 👽

--- a/FrontEnd/Recordatorios/recordatorios.html
+++ b/FrontEnd/Recordatorios/recordatorios.html
@@ -9,11 +9,16 @@
 <header>
     <h1>Recordatorios</h1>
 </header>
-<div class="sidebar">
-    <div class="sidebar">
-        <div class="circulos"></div>
-        <div class="circulos"></div>
-      </div>
 <body>
+    <div class="layout">
+        
+        
+        <div class="sidebar">
+            <div class="sidebar">
+                <div class="circulos"></div>
+                <div class="circulos"></div>
+              </div>
+        </div>
+    <div>
 </body>
 </html>
