avance una  banda
-Agregue y mejore el inicio de sesión y el crear cuenta
-Mejore muchísimo la pantalla "RECORDATORIOS"
-tengo que vincular el inicio de sesion y el crear cuenta con la pagina que los redigiría

--- a/FrontEnd/Recordatorios/recordatorios.html
+++ b/FrontEnd/Recordatorios/recordatorios.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recordatorios</title>
     <link rel="stylesheet" href="recordatorios.css">
 </head>
-<header>
-    <h1>Recordatorios</h1>
-</header>
 <body>
     <div class="layout">
-        
-        
         <div class="sidebar">
-            <div class="sidebar">
-                <div class="circulos"></div>
-                <div class="circulos"></div>
-              </div>
+            <div class="circulos"></div>
+            <div class="circulos"></div>
         </div>
-    <div>
+
+        <div class="contenido">
+            <div class="header">
+                <h1>RECORDATORIOS</h1>
+                <button class="botonagregar">+</button>
+            </div>
+
+            <div class="contenedor">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
