Aprendí a pasar de una página a otra
al presionar iniciar session o crear cuenta ahora SI te lleva a donde tenes que ir. Y una vez ahí podes presionar enviar para que te lleve a la página prinicpal. ♨️

Aprendí a hacerlo y lo puedo hacer las veces necesario SI O SI CON LIVE SERVER

--- a/FrontEnd/iniciar sesion datos/Istext.html
+++ b/FrontEnd/iniciar sesion datos/Istext.html
@@ -15,8 +15,7 @@
         <input class="Is"  placeholder="Usuario"> </input>
         <input class="Is" placeholder="Contraseña"> </input>
         <button class="send">
-            <h1>enviar</h1>
-        </button>
+            <a href="/FrontEnd/pantalla de inicio/inicio.html"><h1>enviar</h1></button>
     </div>
     </div>
 </body>
