--- a/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
+++ b/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAD</title>
     <link rel="stylesheet" href="Primer Wire Frame.css">
 </head>
+
 <body>
     <img src="DAD logo.png" id="Logo" alt="Logo del DAD">
-<h1>DAD</h1>
-<H2>Dispositivo de Asistencia Domestica</H2>
-<div class="boton">
-    <button class="Is"> Iniciar sesion </button>
-    <button class="Is"> Crear cuenta </button>
-</div>
-</div>
+    <h1>DAD</h1>
+    <H2>Dispositivo de Asistencia Domestica</H2>
+    <div class="boton">
+        <button class="Is">
+            <a href="/FrontEnd/iniciar sesion datos/Istext.html">Iniciar sesion</a>  </button>
+        <button class="Is"> 
+            <a href="/FrontEnd/crear cuenta/CC.HTML"> Crear cuenta </button>
+    </div>
+    </div>
 </body>
+
 </html>
