--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -20,68 +20,140 @@
                 <div class="cajarecor">
                     <h2>Recordatorios</h2>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Llama a Mario</button>
-                        <button class="dato-recordatorio">Hoy</button>
-                        <button class="dato-recordatorio">17:30</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Llama a Mario</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">17:30</a>
+                        </button>
                     </div>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Toma pastillas...</button>
-                        <button class="dato-recordatorio">Hoy</button>
-                        <button class="dato-recordatorio">18:00</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Toma pastillas...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">18:00</a>
+                        </button>
                     </div>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Mira el partido...</button>
-                        <button class="dato-recordatorio">Hoy</button>
-                        <button class="dato-recordatorio">20:30</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Mira el partido...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">20:30</a>
+                        </button>
                     </div>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Tienes un des...</button>
-                        <button class="dato-recordatorio">22/5</button>
-                        <button class="dato-recordatorio">10:00</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Tienes un des...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">22/5</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">10:00</a>
+                        </button>
                     </div>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Vienen a pintar...</button>
-                        <button class="dato-recordatorio">22/5</button>
-                        <button class="dato-recordatorio">15:45</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Vienen a pintar...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">22/5</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">15:45</a>
+                        </button>
                     </div>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Programa de f...</button>
-                        <button class="dato-recordatorio">22/5</button>
-                        <button class="dato-recordatorio">17:00</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Programa de f...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">22/5</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">17:00</a>
+                        </button>
                     </div>
                 </div>
 
                 <div class="cajarecor">
                     <h2>Recordatorios diarios</h2>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Toma agua</button>
-                        <button class="dato-recordatorio">Hoy</button>
-                        <button class="dato-recordatorio">8:00</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">>Toma agua</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">8:00</a>
+                        </button>
                     </div>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Revuenta ban...</button>
-                        <button class="dato-recordatorio">Hoy</button>
-                        <button class="dato-recordatorio">9:00</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Revuenta ban...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">9:00</a>
+                        </button>
                     </div>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Toma agua</button>
-                        <button class="dato-recordatorio">Hoy</button>
-                        <button class="dato-recordatorio">10:00</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Toma agua</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">10:00</a>
+                        </button>
                     </div>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Sal al balcon...</button>
-                        <button class="dato-recordatorio">Hoy</button>
-                        <button class="dato-recordatorio">10:30</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Sal al balcon...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">10:30</a>
+                        </button>
                     </div>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Ordena el cuar...</button>
-                        <button class="dato-recordatorio">Hoy</button>
-                        <button class="dato-recordatorio">11:00</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Ordena el cuar...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">11:00</a>
+                        </button>
                     </div>
                     <div class="fila-recordatorio">
-                        <button class="texto-recordatorio">Toma agua</button>
-                        <button class="dato-recordatorio">Hoy</button>
-                        <button class="dato-recordatorio">12:00</button>
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Toma agua</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">12:00</a>
+                        </button>
                     </div>
                 </div>
 
