--- a/FrontEnd/Recordatorios/recordatorios.html
+++ b/FrontEnd/Recordatorios/recordatorios.html
@@ -16,12 +16,47 @@
         <div class="contenido">
             <div class="header">
                 <h1>RECORDATORIOS</h1>
-                <button class="botonagregar">+</button>
+                <button class="botonagregar" onclick="abrirModal()">+</button>
             </div>
 
             <div class="contenedor">
             </div>
         </div>
     </div>
+
+    <div class="modal" id="modal">
+        <div class="modal-contenido">
+            <h2>Nuevo recordatorio</h2>
+            
+            <label>Mensaje...</label>
+            <textarea id="mensaje" rows="3"></textarea>
+
+            <div class="fecha-hora">
+                <div>
+                    <label>Fecha:</label>
+                    <input type="date" id="fecha" placeholder="DD/MM/AAAA">
+                </div>
+                <div>
+                    <label>Horario:</label>
+                    <input type="time" id="horario" placeholder="HH:MM">
+                </div>
+            </div>
+
+            <div class="avisar">
+                <label>Avisar antes:</label>
+                <div class="toggle" id="toggle" onclick="cambiarToggle()">
+                    <div class="toggle-circulo" id="circulo"></div>
+                </div>
+            </div>
+
+            <div class="botones">
+                <button class="btn btn-agregar" onclick="agregarRecordatorio()">AGREGAR</button>
+                <button class="btn btn-cancelar" onclick="cerrarModal()">CANCELAR</button>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="recordatorios.js"></script>
 </body>
 </html>
