chequear cocn cladue

--- a/FrontEnd/Recordatorios/recordatorios.html
+++ b/FrontEnd/Recordatorios/recordatorios.html
@@ -16,10 +16,45 @@
         <div class="contenido">
             <div class="header">
                 <h1>RECORDATORIOS</h1>
-                <button class="botonagregar" onclick="abrirModal()">+</button>
             </div>
 
             <div class="contenedor">
+                <button class="botonagregar" onclick="abrirModal()">+</button>
+
+                <!-- Tarjeta de recordatorio -->
+                <div class="tarjeta">
+                    <div class="tarjeta-header">
+                        <span class="mensaje-label">MENSAJE:</span>
+                        <span class="mensaje-texto">Llamar a Mario</span>
+                    </div>
+                    <div class="tarjeta-info">
+                        <div class="info-titulo">INFORMACIÓN ADICIONAL</div>
+                        <div class="info-detalles">
+                            <div class="info-item">
+                                <span class="info-label">FECHA:</span>
+                                <span class="info-valor">Hoy</span>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">HORARIO:</span>
+                                <span class="info-valor">17:30</span>
+                            </div>
+                        </div>
+                        <div class="avisar-antes">
+                            <span>AVISAR ANTES:</span>
+                            <div class="toggle">
+                                <div class="toggle-circulo"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tarjeta-botones">
+                        <button class="btn-tarjeta btn-realizada">
+                            Marcar como realizada ✓
+                        </button>
+                        <button class="btn-tarjeta btn-eliminar">
+                            Eliminar tarea 🗑️
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -55,7 +90,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="recordatorios.js"></script>
 </body>
