Ayudenme con esto
PORFA GEL FIJATE

--- a/FrontEnd/Recordatorios/recordatorios.html
+++ b/FrontEnd/Recordatorios/recordatorios.html
@@ -27,8 +27,7 @@
                         <span class="mensaje-label">MENSAJE:</span>
                         <span class="mensaje-texto">Llamar a Mario</span>
                     </div>
-                    <div class="tarjeta-info">
-                        <div class="info-titulo">INFORMACIÓN ADICIONAL</div>
+                    <div class="tarjeta-info">  
                         <div class="info-detalles">
                             <div class="info-item">
                                 <span class="info-label">FECHA:</span>
@@ -48,10 +47,10 @@
                     </div>
                     <div class="tarjeta-botones">
                         <button class="btn-tarjeta btn-realizada">
-                            Marcar como realizada ✓
+                            Marcar como realizada 
                         </button>
                         <button class="btn-tarjeta btn-eliminar">
-                            Eliminar tarea 🗑️
+                            Eliminar tarea 
                         </button>
                     </div>
                 </div>
