Agregue nuevas caarpetas para las disintos tipos de recordatorios

--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -36,13 +36,13 @@
                     <h2>Recordatorios diarios</h2>
                     <div class="fila-recordatorio">
                         <button class="texto-recordatorio">
-                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Toma agua</a>
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Toma agua</a>
                         </button>
                         <button class="dato-recordatorio">
-                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Hoy</a>
                         </button>
                         <button class="dato-recordatorio">
-                            <a href="/FrontEnd/Recordatorios/recordatorios.html">10:00</a>
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">10:00</a>
                         </button>
                     </div>
                 </div>
@@ -50,7 +50,9 @@
                 <div class="cajarecor">
                     <h2>Objetos para salir de casa</h2>
                     <div class="Botoncitos">
-                        <button class="caji">Anteojos</button>
+                        <button class="caji">
+                            <a href="/FrontEnd/Recordatorios salir casa/Casa.html">Anteojos</a>
+                        </button>
                     </div>
                 </div>
                   
