--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="hola.css">
+</head>
+<body>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="inicio.css">
 </head>
 <body>
     <div class="layout">
         
         <div class="sidebar">
-            <button class="circulos"></button>
             <button class="circulos"></button>
             <button class="botoninferior"></button>
         </div>
@@ -30,6 +38,61 @@
                             <a href="/FrontEnd/Recordatorios/recordatorios.html">17:30</a>
                         </button>
                     </div>
+                    <div class="fila-recordatorio">
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Toma pastillas...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">18:00</a>
+                        </button>
+                    </div>
+                    <div class="fila-recordatorio">
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Mira el partido...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">20:30</a>
+                        </button>
+                    </div>
+                    <div class="fila-recordatorio">
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Tenes un des...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">22/5</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">10:00</a>
+                        </button>
+                    </div>
+                    <div class="fila-recordatorio">
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Vienen a pintar..</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">22/5</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">15:45</a>
+                        </button>
+                    </div>
+                    <div class="fila-recordatorio">
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">Programa de f...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">22/5</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios/recordatorios.html">17:00</a>
+                        </button>
+                    </div>
                 </div>
 
                 <div class="cajarecor">
@@ -42,7 +105,62 @@
                             <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Hoy</a>
                         </button>
                         <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">8:00</a>
+                        </button>
+                    </div>
+                    <div class="fila-recordatorio">
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Recuerda bañ...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">9:00</a>
+                        </button>
+                    </div>
+                    <div class="fila-recordatorio">
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Toma agua</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
                             <a href="/FrontEnd/Recordatorios diarios/Diarios.html">10:00</a>
+                        </button>
+                    </div>
+                    <div class="fila-recordatorio">
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Sali al balcon...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">10:30</a>
+                        </button>
+                    </div>
+                    <div class="fila-recordatorio">
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Ordena el cuar...</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">11:00</a>
+                        </button>
+                    </div>
+                    <div class="fila-recordatorio">
+                        <button class="texto-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Toma agua</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">Hoy</a>
+                        </button>
+                        <button class="dato-recordatorio">
+                            <a href="/FrontEnd/Recordatorios diarios/Diarios.html">12:00</a>
                         </button>
                     </div>
                 </div>
@@ -53,11 +171,25 @@
                         <button class="caji">
                             <a href="/FrontEnd/Recordatorios salir casa/Casa.html">Anteojos</a>
                         </button>
+                        <button class="caji">
+                            <a href="/FrontEnd/Recordatorios salir casa/Casa.html">Billetera</a>
+                        </button>
+                        <button class="caji">
+                            <a href="/FrontEnd/Recordatorios salir casa/Casa.html">Llaves</a>
+                        </button>
+                        <button class="caji">
+                            <a href="/FrontEnd/Recordatorios salir casa/Casa.html">Celular</a>
+                        </button>
+                        <button class="caji">
+                            <a href="/FrontEnd/Recordatorios salir casa/Casa.html">Documentos</a>
+                        </button>
+                        <button class="caji">
+                            <a href="/FrontEnd/Recordatorios salir casa/Casa.html">Reloj</a>
+                        </button>
                     </div>
                 </div>
                   
             </div>
-
             <div class="cajalarga">
                 <h2>Tareas Realizadas</h2>
                 <div class="grupo-botones-tareas">
@@ -65,6 +197,16 @@
                         <button class="texto-tarea">Llama a Irene</button>
                         <button class="circulo-mini">Hoy</button>
                         <button class="circulo-mini">17:30</button>
+                    </div>
+                    <div class="contenedor-tarea">
+                        <button class="texto-tarea">Ir al supermer...</button>
+                        <button class="circulo-mini">Hoy</button>
+                        <button class="circulo-mini">15:15</button>
+                    </div>
+                    <div class="contenedor-tarea">
+                        <button class="texto-tarea">Hacer la lista d..</button>
+                        <button class="circulo-mini">Hoy</button>
+                        <button class="circulo-mini">14:30</button>
                     </div>
                 </div>
             </div>
