--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -19,8 +19,9 @@
     <div class="layout">
         
         <div class="sidebar">
+            <img src="Configuración.png" alt="">
             <button class="circulos"></button>
-            <button class="botoninferior"></button>
+            <img src="image.png" alt="Logo">
         </div>
         
         <div class="contenido">
