--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="hola.css">
-</head>
-<body>
     <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,8 +11,7 @@
         
         <div class="sidebar">
             <img src="Configuración.png" alt="">
-            <button class="circulos"></button>
-            <img src="image.png" alt="Logo">
+            <img class="logo-sidebar" src="image.png" alt="logo"> 
         </div>
         
         <div class="contenido">
