--- a/FrontEnd/Recordatorios/recordatorios.html
+++ b/FrontEnd/Recordatorios/recordatorios.html
@@ -12,7 +12,7 @@
       <div class="icono-lateral atras">
         <img src="flechaHeader.png" class="flechita">
         <i class="fas fa-chevron-left"></i></div>
-        <img src="Configuración.png" alt="configuracion">
+        <img src="/Imagenes/Ajustes.png" alt="configuracion">
       <div class="icono-lateral engranaje"><i class="fas fa-cog"></i></div>
       <div class="icono-lateral-inferior"><i class="fas fa-asterisk"></i></div>
     </div>
