--- a/FrontEnd/crear cuenta/CC.HTML
+++ b/FrontEnd/crear cuenta/CC.HTML
@@ -8,7 +8,7 @@
 </head>
 <body>
     <body>
-        <img src="Imagenes/LogoDAD.png" alt="imagen del logo" id="Logo">
+        <img src="/Imagenes/LogoDAD.png" alt="imagen del logo" id="Logo">
     <h1>DAD</h1>
     <H2>Dispositivo de Asistencia Domestica</H2>
     <div class="boton">
