--- a/FrontEnd/Recordatorios salir casa/Casa.html
+++ b/FrontEnd/Recordatorios salir casa/Casa.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <div class="distribucion"> <div class="barra-lateral"> <div class="icono-lateral atras"> <i class="fas fa-chevron-left"></i>
-            </div>
-            
-            <div class="icono-lateral engranaje"> <i class="fas fa-cog"></i>
-            </div>
-            
-            <div class="icono-lateral-inferior"> <i class="fas fa-asterisk"></i>
-            </div>
-        </div>
+    <div class="distribucion">
+        <div class="barra-lateral">
+            <div class="icono-lateral atras">
+              <img src="flechaHeader.png" class="flechita">
+              <i class="fas fa-chevron-left"></i></div>
+              <img src="/Imagenes/Ajustes.png" alt="configuracion">
+            <div class="icono-lateral engranaje"><i class="fas fa-cog"></i></div>
+            <div class="icono-lateral-inferior"><i class="fas fa-asterisk"></i></div>
+          </div>
 
         <div class="contenido">
             <div class="encabezado"> <h1>Objetos para salir de casa</h1>
