--- a/FrontEnd/Recordatorios diarios/Diarios.html
+++ b/FrontEnd/Recordatorios diarios/Diarios.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <div class="layout">
-        <div class="sidebar">
-          <div class="icono"></div>
-          <div class="icono"></div>
-          <div class="icono"></div>
-        </div>
+      
+  <div class="distribucion">
+    <div class="barra-lateral">
+      <div class="icono-lateral atras">
+        <img src="/Imagenes/flechita hacia atras.png" class="flechita">
+        <i class="fas fa-chevron-left"></i></div>
+        <img src="/Imagenes/Ajustes.png" alt="configuracion">
+      <div class="icono-lateral engranaje"><i class="fas fa-cog"></i></div>
+      <div class="icono-lateral-inferior"><i class="fas fa-asterisk"></i></div>
+    </div>
+
     
         <div class="contenido">
           <div class="header">
