--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -9,10 +9,17 @@
 <body>
     <div class="layout">
         
-        <div class="sidebar">
-            <img src="Configuración.png" alt="">
-            <img class="logo-sidebar" src="image.png" alt="logo"> 
-        </div>
+        <div class="barra-lateral">
+
+    <!-- BOTÓN: Ajustes -->
+    <a href="/FrontEnd/Ajusstes/ajustess.html" class="sidebar-btn">
+        <img src="/Imagenes/Ajustes.png" class="icono-sidebar">
+    </a>
+
+    <!-- LOGO FINAL (NO botón) -->
+    <img src="/Imagenes/LogoDAD.png" class="sidebar-logo" alt="logo">
+
+</div>
         
         <div class="contenido">
             <div class="contenedor">
