--- a/FrontEnd/iniciar sesion datos/Istext.html
+++ b/FrontEnd/iniciar sesion datos/Istext.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iniciar Sesión</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="Istext.css">
 </head>
+
 <body>
-    <body>
-        <img src="/Imagenes/LogoDAD.png" alt="imagen del logo" id="Logo">
-    <h1>DAD</h1>
-    <H2>Dispositivo de Asistencia Domestica</H2>
-    <div class="boton">
-        <input class="Is"  placeholder="Usuario"> </input>
-        <input class="Is" placeholder="Contraseña"> </input>
-        <button class="send">
-            <a href="/FrontEnd/pantalla de inicio/inicio.html"><h1>enviar</h1></button>
+
+    <div class="contenedor">
+
+        <img src="/FrontEnd/inicio de sesión WF/DAD logo.png" class="logo">
+
+        <h1 class="titulo">DAD</h1>
+        <h2 class="subtitulo">Dispositivo de Asistencia Domestica</h2>
+
+        <input class="campo" type="text" placeholder="Usuario">
+        <input class="campo" type="password" placeholder="Contraseña">
+
+        <button class="btn-confirmar" onclick="location.href='/FrontEnd/pantalla de inicio/inicio.html'">
+            Confirmar
+        </button>
+
     </div>
-    </div>
+
 </body>
 </html>
