--- a/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
+++ b/FrontEnd/inicio de sesión WF/Primer Wire Frame.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAD</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="Primer Wire Frame.css">
 </head>
 
 <body>
-    <img src="DAD logo.png" id="Logo" alt="Logo del DAD">
-    <h1>DAD</h1>
-    <H2>Dispositivo de Asistencia Domestica</H2>
-    <div class="boton">
-        <button class="Is">
-            <a href="/FrontEnd/iniciar sesion datos/Istext.html">Iniciar sesion</a>  </button>
-        <button class="Is"> 
-            <a href="/FrontEnd/crear cuenta/CC.HTML"> Crear cuenta </button>
+
+    <div class="contenedor">
+
+        <img src="/FrontEnd/inicio de sesión WF/DAD logo.png" id="Logo" alt="Logo DAD">
+
+        <h1 class="titulo">DAD</h1>
+        <h2 class="subtitulo">Dispositivo de Asistencia Domestica</h2>
+
+        <button class="boton-principal" onclick="location.href='/FrontEnd/iniciar sesion datos/Istext.html'">
+            Iniciar sesion
+        </button>
+
+        <div class="linea"></div>
+
+        <button class="boton-principal" onclick="location.href='/FrontEnd/crear cuenta/CC.HTML'">
+            Crear cuenta
+        </button>
+
     </div>
-    </div>
+
 </body>
-<script src="primer WireFrame.js"></script>
+
 </html>
