--- a/FrontEnd/iniciar sesion datos/Istext.html
+++ b/FrontEnd/iniciar sesion datos/Istext.html
@@ -40,6 +40,6 @@
     <script src="https://cdn.jsdelivr.net/gh/JZylber/SoqueTIC-Client@v1.4.2/soquetic-client.js"></script>
 
     <!-- Tu JS para el inicio de sesión -->
-    <script src="login.js"></script>
+    <script src="istext.js"></script>
 </body>
 </html>
