Iniciar sesio y registrarse hecho

--- a/FrontEnd/crear cuenta/CC.HTML
+++ b/FrontEnd/crear cuenta/CC.HTML
@@ -23,11 +23,17 @@
         <input class="campo" type="text" placeholder="Crea nombre de usuario">
         <input class="campo" type="password" placeholder="Crea contraseña">
 
-        <button class="boton-confirmar" onclick="location.href='/FrontEnd/pantalla de inicio/inicio.html'">
+        <button class="boton-confirmar">
             Confirmar
         </button>
 
     </div>
+
+    <!-- SoqueTIC + tu JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.8.1/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/JZylber/SoqueTIC-Client@v1.4.2/soquetic-client.js"></script>
+
+    <script src="CC.js"></script>
 
 </body>
 </html>
