api.js actualizado

--- a/FrontEnd/pantalla de inicio/inicio.html
+++ b/FrontEnd/pantalla de inicio/inicio.html
@@ -208,5 +208,11 @@
             </div>
         </div>
     </div>
+    <!-- SoqueTIC: cliente -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.8.1/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/JZylber/SoqueTIC-Client@v1.4.2/soquetic-client.js"></script>
+
+    <!-- JS de la pantalla de inicio -->
+    <script src="inicio.js"></script>
 </body>
 </html>
